# the_witty_chatbot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflow/: ci.yml
src/the_witty_senior/app/: main.py
src/the_witty_senior/app/routes/: tutor.py
src/the_witty_senior/core/: config.py
src/the_witty_senior/models/: attempt.py  session.py
src/the_witty_senior/services/: llm_service.py  session_service.py  tutor_service.py
src/the_witty_tutor/app/: main.py
src/the_witty_tutor/app/routes/: tutor.py
src/the_witty_tutor/core/: config.py
src/the_witty_tutor/infra/: code_runner.py
src/the_witty_tutor/models/: messages.py  session.py  user.py
src/the_witty_tutor/services/: eval_service.py  llm_service.py  session_service.py  tutor_service.py
