[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[project]
name = "the-witty-senior"
version = "0.0.1"
dependencies = [
  "pytest",
  "fastapi",
  "uvicorn",
  "openai>=2.2.0",
  "dotenv>=0.9.9",
  "uuid>=1.30",
]
requires-python = ">= 3.8"
authors = [
  {name = "Thuy Nga Dinh", email = "dinhnga.1509@outlook.com"},
]
readme = "README.md"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.mypy]
strict = true
